add: file storage, ui. fix: cli, domain